2011-11-24  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: Made mmg DPI-aware on Windows (tested up to
	144 DPI).

2011-11-09  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: mmg will append ".xml" to the file name entered
	when saving from the chapter editor if no extension was given.

2011-11-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: Improved skipping broken data on all operating
	systems.

	* mkvmerge, mkvextract: bug fix: Skipping broken data in Matroska
	file often caused the program to abort on Windows. This has been
	fixed so that processing continues after the broken part. Fix for
	bug 668.

2011-11-04  Moritz Bunkus  <moritz@bunkus.org>

	* examples: Added XSLT 2.0 stylesheets in the
	"examples/stylesheets" directory for turning Matroska chapters
	into cue sheet and split points for "shntool" (useful for
	situations in which you have e.g. a live recording from a concert
	including chapters and want to create one audio file per song).

	* mkvmerge: bug fix: Fixed reading VC1 video tracks from Matroska
	files that don't use VC1 start markers (0x00 0x00 0x01 ...).

2011-10-30  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: Added "ogv" to the list of known file
	extensions for "Ogg/OGM audio/video files". Implements bug 667.

	* mmg: bug fix: A utility function for breaking a line into
	multiple ones was accessing invalid memory in rare situations
	causing mmg to crash. Could happen e.g. when adding a job to the
	job queue.

2011-10-24  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: mkvmerge will use DTS instead of PTS for VC1
	video tracks read from MPEG transport streams.

2011-10-23  Moritz Bunkus  <moritz@bunkus.org>

	* build system: Boost's "Range" library is now required.

	* build system: Boost v1.46.0 or newer is now required. As a
	consequence included copies of some of Boost's libraries have been
	removed (foreach, property tree).
