@@ -25,3 +25,5 @@ BEGIN
     VALUE "Translation", 0x0409, 1252 // Englisch (USA)
   END
 END
+
+1 RT_MANIFEST "manifest.xml"
